Fixes form z-index.

--- a/sass/_commentForm.scss
+++ b/sass/_commentForm.scss
@@ -25,6 +25,7 @@
 		flex-direction: column;
 		width: 100%;
 		gap: 0.5rem;
+		z-index: 1;
 
 		.text {
 			width: 100%;
